<resources>

    <!--strings for the main menu !-->
    <string name="app_name">Pflegi3000</string>
    <string name="patient_str">Patienten</string>
    <string name="addpatient_str">Patient hinzufügen</string>
    <string name="altertables_str">Tabellen bearbeiten</string>

    <!--strings for add/show patient activity !-->
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="gender">Geschlecht</string>
    <string name="insuranceNr">Versicherungsnummer</string>
    <string name="insuranceType">Versicherungstyp</string>

    <!--string for search patient activity!-->
    <string name="search_hint">Patienten suchen</string>
    <string name="test_show_patients">Test show P</string>

    <!--strings that are often used!-->
    <string name="back">Zurück</string>
    <string name="submit">Bestätigen</string>
    <string name="delete">Löschen</string>

    <!--string for editable button-->
    <string name="action_enable_editable">bearbeiten</string>
    <string name="title_activity_show_patient2">ShowPatientActivity2</string>
    <string name="tab_text_1">Patient</string>
    <string name="tab_text_2">Medikamente</string>
    <string name="tab_text_3">Pflege</string>
    <string name="tab_text_4">Termine</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--strings for alter Table activity !-->
    <string name="drop_patient_table">Drop Patient Table</string>
    <string name="edit_insurance_table">Versicherung hinzufügen</string>
    <string name="drop_insurance_table">Drop Insurance Table</string>
    <string name="drop_appointment_table">Drop Appointment Table</string>
    <string name="insurance_name">Versicherungsname</string>
    <string name="insurance_type">Versicherungstyp</string>

    <!--strings for add Appointment-->
    <string name="appointment_name_str">Termin Name</string>
    <string name="appointment_date_str">Datum</string>
    <string name="appointment_description_str">Beschreibung</string>
    <string name="appointment_address_str">Adresse</string>

    <string name="plus_str">+</string>

    <!--strings for Care Fragment-->
    <string name="last_defestication">Letzter Stuhlgang</string>
    <string name="last_meal">Letzte Mahlzeit</string>
    <string name="last_washed">Zueletzt gewaschen</string>
    <string name="now">Jetzt</string>
</resources>
