<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.alter_tables_activity.AlterTablesActivity">


    <Button
        android:id="@+id/back_button_altertable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/edit_insurancetable_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_insurance_table"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/drop_insurancetable_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drop_insurance_table"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_insurancetable_button" />

</android.support.constraint.ConstraintLayout>